[tool.poetry]
name = "microshop"
version = "0.1.0"
description = ""
authors = ["pavel <p204368@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.114.1"
uvicorn = {extras = ["standart"], version = "^0.30.6"}

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
